[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.4"
tracing = "0.1"
tracing-subscriber = "0.3"
pyo3 = { version = "0.19", features = ["extension-module"] }

[lib]
crate-type = ["cdylib"]
